routes/flights/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flights-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flights.airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: flights-app
          port: 3000
  tls:
    certResolver: traefik-airlines
